--- a/BME680-manifest.json
+++ b/BME680-manifest.json
@@ -1,1 +1,150 @@
-{"id":833,"name":"BME680","protocol":"JsonSingleReferenceProtocol","description":"Device manifest for the BME680 sensor","deviceType":"STANDARD","connectivityType":"MQTT_BROKER","published":false,"feeds":[{"id":1381,"name":"Temperature","reference":"T","description":"","unit":{"id":31,"name":"CELSIUS","symbol":"℃","readingTypeId":2,"system":"SI","context":null,"inUse":true,"readingTypeName":"TEMPERATURE"},"minimum":-40,"maximum":80,"readingType":{"id":2,"name":"TEMPERATURE","dataType":"NUMERIC","size":1,"precision":1,"labels":null,"iconName":"ico_temperature"}},{"id":1382,"name":"Humidity","reference":"H","description":"","unit":{"id":124,"name":"HUMIDITY_PERCENT","symbol":"%","readingTypeId":4,"system":"NON_SI","context":null,"inUse":true,"readingTypeName":"HUMIDITY"},"minimum":0,"maximum":100,"readingType":{"id":4,"name":"HUMIDITY","dataType":"NUMERIC","size":1,"precision":1,"labels":null,"iconName":"ico_humidity"}},{"id":1383,"name":"Pressure","reference":"P","description":"","unit":{"id":112,"name":"MILLIBAR","symbol":"mb","readingTypeId":3,"system":"NON_SI","context":null,"inUse":true,"readingTypeName":"PRESSURE"},"minimum":300,"maximum":1100,"readingType":{"id":3,"name":"PRESSURE","dataType":"NUMERIC","size":1,"precision":1,"labels":null,"iconName":"ico_pressure"}},{"id":1384,"name":"Gas Resistance","reference":"GR","description":"","unit":{"id":23,"name":"OHM","symbol":"Ω","readingTypeId":43,"system":"SI","context":null,"inUse":true,"readingTypeName":"ELECTRIC_RESISTANCE"},"minimum":0,"maximum":100000,"readingType":{"id":43,"name":"ELECTRIC_RESISTANCE","dataType":"NUMERIC","size":1,"precision":1,"labels":null,"iconName":null}},{"id":1385,"name":"Altitude","reference":"A","description":"","unit":{"id":26,"name":"METRE","symbol":"m","readingTypeId":22,"system":"SI","context":null,"inUse":true,"readingTypeName":"LENGHT"},"minimum":-1000,"maximum":3000,"readingType":{"id":22,"name":"LENGHT","dataType":"NUMERIC","size":1,"precision":1,"labels":null,"iconName":"ico_length"}}],"actuators":[],"alarms":[],"configs":[],"generallyAvailable":false}
+{
+  "id": 833,
+  "name": "Environment click",
+  "protocol": "JsonSingleReferenceProtocol",
+  "description": "Device template for the BME680 sensor on MikroElektronika's board Environment click",
+  "deviceType": "STANDARD",
+  "connectivityType": "MQTT_BROKER",
+  "published": false,
+  "feeds": [
+    {
+      "id": 1381,
+      "name": "Temperature",
+      "reference": "T",
+      "description": "",
+      "unit": {
+        "id": 31,
+        "name": "CELSIUS",
+        "symbol": "℃",
+        "readingTypeId": 2,
+        "system": "SI",
+        "context": null,
+        "inUse": true,
+        "readingTypeName": "TEMPERATURE"
+      },
+      "minimum": -40,
+      "maximum": 80,
+      "readingType": {
+        "id": 2,
+        "name": "TEMPERATURE",
+        "dataType": "NUMERIC",
+        "size": 1,
+        "precision": 1,
+        "labels": null,
+        "iconName": "ico_temperature"
+      }
+    },
+    {
+      "id": 1382,
+      "name": "Humidity",
+      "reference": "H",
+      "description": "",
+      "unit": {
+        "id": 124,
+        "name": "HUMIDITY_PERCENT",
+        "symbol": "%",
+        "readingTypeId": 4,
+        "system": "NON_SI",
+        "context": null,
+        "inUse": true,
+        "readingTypeName": "HUMIDITY"
+      },
+      "minimum": 0,
+      "maximum": 100,
+      "readingType": {
+        "id": 4,
+        "name": "HUMIDITY",
+        "dataType": "NUMERIC",
+        "size": 1,
+        "precision": 1,
+        "labels": null,
+        "iconName": "ico_humidity"
+      }
+    },
+    {
+      "id": 1383,
+      "name": "Pressure",
+      "reference": "P",
+      "description": "",
+      "unit": {
+        "id": 112,
+        "name": "MILLIBAR",
+        "symbol": "mb",
+        "readingTypeId": 3,
+        "system": "NON_SI",
+        "context": null,
+        "inUse": true,
+        "readingTypeName": "PRESSURE"
+      },
+      "minimum": 300,
+      "maximum": 1100,
+      "readingType": {
+        "id": 3,
+        "name": "PRESSURE",
+        "dataType": "NUMERIC",
+        "size": 1,
+        "precision": 1,
+        "labels": null,
+        "iconName": "ico_pressure"
+      }
+    },
+    {
+      "id": 1384,
+      "name": "Gas Resistance",
+      "reference": "GR",
+      "description": "",
+      "unit": {
+        "id": 23,
+        "name": "OHM",
+        "symbol": "Ω",
+        "readingTypeId": 43,
+        "system": "SI",
+        "context": null,
+        "inUse": true,
+        "readingTypeName": "ELECTRIC_RESISTANCE"
+      },
+      "minimum": 0,
+      "maximum": 100000,
+      "readingType": {
+        "id": 43,
+        "name": "ELECTRIC_RESISTANCE",
+        "dataType": "NUMERIC",
+        "size": 1,
+        "precision": 1,
+        "labels": null,
+        "iconName": null
+      }
+    },
+    {
+      "id": 1385,
+      "name": "Altitude",
+      "reference": "A",
+      "description": "",
+      "unit": {
+        "id": 26,
+        "name": "METRE",
+        "symbol": "m",
+        "readingTypeId": 22,
+        "system": "SI",
+        "context": null,
+        "inUse": true,
+        "readingTypeName": "LENGHT"
+      },
+      "minimum": -1000,
+      "maximum": 3000,
+      "readingType": {
+        "id": 22,
+        "name": "LENGHT",
+        "dataType": "NUMERIC",
+        "size": 1,
+        "precision": 1,
+        "labels": null,
+        "iconName": "ico_length"
+      }
+    }
+  ],
+  "actuators": [],
+  "alarms": [],
+  "configs": [],
+  "generallyAvailable": false
+}
